--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   /* Контейнер сетки */
   .grid-container {
     display: grid;
-    grid-template-columns: repeat(8, 1fr); 
+    grid-template-columns: 20% 20% 20% 20%; 
     grid-template-rows: auto auto auto auto; 
     gap: 10px;
     width: 90%;
@@ -28,14 +28,14 @@
   }
 
   /* Цветные элементы сетки с именованными областями */
-  .item1 { grid-column: span 8; grid-row: 1; background-color: #FF6B6B; }
-  .item2 { grid-template-columns: 8 ; grid-row: 1 /span 12; background-color: #FFD93D; }
-  .item3 { grid-column: span 5; grid-row: 4; background-color: #6BCB77; }
-  .item4 { grid-column: 9; grid-row: 13; background-color: #4D96FF; }
-  .item5 { grid-column: 1 / span 3; grid-row: 4 / span 8; background-color: #FFB6B9; }
-  .item6 { grid-column: span 4; grid-row: 2 ; background-color: #A1E8AF; }
-  .item7 { grid-column: span 4; grid-row: 2; background-color: #FFE156; }
-  .item8 { grid-column: span 8; grid-row: 3; background-color: #FF9F1C; }
+  .item1 { grid-column: span 4; grid-row: 1; background-color: #FF6B6B; } /* заголовок */
+  .item2 { grid-template-columns: 4 ; grid-row: 1 /span 7; background-color: #FFD93D; } /* боковая панель */
+  .item3 { grid-column: 2 / 5; grid-row: 4 / 8; background-color: #6BCB77; } /* контент */
+  .item4 { grid-column: 5; grid-row: 8; background-color: #4D96FF; } /* футер */
+  .item5 { grid-column: 1 / 2; grid-row: 4 / 8; background-color: #FFB6B9; } /* большой блок */
+  .item6 { grid-column: span 2; grid-row: 2 ; background-color: #A1E8AF; } /* широкий блок */
+  .item7 { grid-column: span 2; grid-row: 2; background-color: #FFE156; } /* во всю ширину */
+  .item8 { grid-column: 1 / 5; grid-row: 3; background-color: #FF9F1C; } /* нижний блок */
  
 
 
